feat: redis, 演示如何切换为Jedis

--- a/boot3-09-redis-stu/src/main/resources/application.properties
+++ b/boot3-09-redis-stu/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=boot3-09-redis-stu
 
 spring.data.redis.host=hadoop100
 spring.data.redis.port=6379
+
+#spring.data.redis.lettuce.cluster.refresh.adaptive=true
+#spring.data.redis.lettuce.pool.enabled=true
+
+#???lettuce
+#spring.data.redis.client-type=lettuce
+
+# ????Jedis????????, ?????
+spring.data.redis.client-type=jedis
+spring.data.redis.jedis.pool.max-active=8
+spring.data.redis.lettuce.pool.enabled=true
