feat: OpenAPI文档，@Paramter会导致path参数不显示

--- a/boot3-10-crud-stu/src/main/resources/application.properties
+++ b/boot3-10-crud-stu/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=boot3-10-crud-stu
+
+# /api-docs endpoint custom path ?? /v3/api-docs
+#springdoc.api-docs.path=/api-docs
+
+# swagger ?????  springdoc.swagger-ui
+# swagger-ui custom path
+#springdoc.swagger-ui.path=/swagger-ui.html
+#
+#springdoc.show-actuator=true
