--- a/boot3-12-message-stu/src/main/resources/application.properties
+++ b/boot3-12-message-stu/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=boot3-12-message-stu
 
 spring.kafka.bootstrap-servers=hadoop100:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
