--- a/boot3-13-security-stu/src/main/resources/application.properties
+++ b/boot3-13-security-stu/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=boot3-13-security-stu
+
+spring.security.user.name=zhangsan
+spring.security.user.password=123456
+spring.security.user.roles=admin
