--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>boot3-15-aot-common</module>
         <module>boot3-16-aot-springboot</module>
         <module>boot3-13-security-stu</module>
+        <module>boot3-14-actuator-stu</module>
     </modules>
 
 </project>
