feat: 可观测性- 自定义health

--- a/boot3-14-actuator-stu/src/main/resources/application.properties
+++ b/boot3-14-actuator-stu/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=boot3-14-actuator-stu
 
 management.endpoints.web.exposure.include=*
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
